lib/tests/fixtures/compiler/parser/class_default_value_assignment.pp
class bad($param = [$wrong = 1]) {

}

include bad
